# Archers-vs-Zombies

./: .gitignore  CLAUDE.md  LICENSE  MatrixGame.py  README.md  TEST.py  collect_dataset.py  evaluation.py  extract_weights.py  main.py  policy.pth  pyproject.toml  random_agent.py  requirements.txt  reward_wrapper.py  ssh.md  submission.py  submission_example_rllib.py  submission_privileged.py  test_detections.py  test_quick_zombie_detector.py  test_zombie_detector.py  train_policy.py  utils.py  vector_obs_wrapper.py  vector_policy.py  visual_utils.py
observation_data/: example_obs.npy  example_zombies.npy
task2/: BoltzmannAgent.py  EpsilonAgent.py  LenientAgent.py  Plot.py  Training.py  algorithms.py  dynamics.py  games.py  main.py  plotting.py  training.py
zombie_detection/: cnn.py  dataset.py  explanation_preprocessing_dataset.md  preprocessing.py  real_game_test.py  rllib_model.py  test_simulation.py  train.py
